@@ -1,19 +1,26 @@
 VERSION = 1.2.2
-FOOBAR2000_SDK_DIR = ../../foobar2000_SDK
-DSHOW_BASECLASSES_DIR = "C:/Program Files/Microsoft SDKs/Windows/v6.1/Samples/Multimedia/DirectShow/BaseClasses"
 
-CL = cl -nologo -O2 -GL -GR- -GS- -W3 -wd4996 -DNDEBUG
-LINKOPT = -link -release
-MKLIB = lib -nologo -ltcg -out:$@
-ASAP_CL = $(CL) -Fe$@ -I . -I ..
-ASAP_CL71 = cl -nologo -O2 -GL -GR- -W3 -DNDEBUG -Fe$@ -I . -I ..
+# gcc for most ports
 ASAP_GCC = mingw32-gcc -s -O2 -Wall -o $@ -I. -I..
 ASAP_GPP = mingw32-g++ -s -O2 -Wall -o $@ -I. -I..
 WINDRES = windres -o $@
+LIB_GCC = mingw32-gcc -O2 -Wall -I..
+AR = ar rc
+
+# Microsoft compiler for Windows Media Player and foobar2000
+DSHOW_BASECLASSES_DIR = "C:/Program Files/Microsoft SDKs/Windows/v6.1/Samples/Multimedia/DirectShow/BaseClasses"
+FOOBAR2000_SDK_DIR = ../../foobar2000_SDK
+CL = cl -nologo -O2 -GL -GR- -GS- -W3 -wd4996 -DNDEBUG
+LINKOPT = -link -release
+MKLIB = lib -nologo -ltcg -out:$@
+ASAP_CL = $(CL) -Fe$@ -I. -I..
+
+# old Microsoft compiler for XBMC plugin
+ASAP_CL71 = cl -nologo -O2 -GL -GR- -W3 -DNDEBUG -Fe$@ -I. -I..
+
+# common tools
 PERL = perl
 XASM = xasm -q -o $@
-WINCE_CC = arm-wince-mingw32ce-gcc -s -O2 -Wall -o $@ -I. -I..
-WINCE_WINDRES = arm-wince-mingw32ce-windres -o $@
 UNIX2DOS = unix2dos
 ASCIIDOC = python C:/bin/asciidoc/asciidoc.py -o $@ -a doctime
 ASCIIDOC_POSTPROCESS = $(PERL) -pi.bak -e "s/527bbd;/c02020;/;END{unlink '$@.bak'}" $@
@@ -21,7 +28,11 @@ ASCIIDOC_POSTPROCESS = $(PERL) -pi.bak -e "s/527bbd;/c02020;/;END{unlink '$@.bak
 COMMON_C = ../asap.c ../acpu.c ../apokeysnd.c
 COMMON_H = ../asap.h ../asap_internal.h ../players.h
 
-all: asap2wav.exe wasap.exe in_asap.dll gspasap.dll asap_dsf.dll ASAP_Apollo.dll apokeysnd.dll
+all: mingw dsf foo asap.lib
+
+win32: mingw dsf foo xbmc COPYING.txt
+
+mingw: asap2wav.exe wasap.exe in_asap.dll gspasap.dll ASAP_Apollo.dll apokeysnd.dll asapscan.exe libasap.a
 
 ../players.h: ../raw2c.pl ../players/cmc.obx ../players/mpt.obx ../players/rmt4.obx ../players/rmt8.obx ../players/tmc.obx ../players/tm2.obx
 	$(PERL) $^ >$@
@@ -63,13 +74,13 @@ foo: foo_asap.dll
 FOOBAR2000_RUNTIME = $(FOOBAR2000_SDK_DIR)/foobar2000/foobar2000_component_client/component_client.cpp foobar2000/foobar2000_SDK.lib foobar2000/pfc.lib $(FOOBAR2000_SDK_DIR)/foobar2000/shared/shared.lib
 
 foo_asap.dll: foobar2000/foo_asap.cpp $(COMMON_C) foobar2000/foo_asap.res $(COMMON_H) gui.h $(FOOBAR2000_RUNTIME)
-	$(ASAP_CL) -DFOOBAR2000 -LD -DWIN32 -DUNICODE -EHsc -I $(FOOBAR2000_SDK_DIR) foobar2000/foo_asap.cpp $(COMMON_C) foobar2000/foo_asap.res $(FOOBAR2000_RUNTIME) user32.lib $(LINKOPT)
+	$(ASAP_CL) -DFOOBAR2000 -LD -DWIN32 -DUNICODE -EHsc -I$(FOOBAR2000_SDK_DIR) foobar2000/foo_asap.cpp $(COMMON_C) foobar2000/foo_asap.res $(FOOBAR2000_RUNTIME) user32.lib $(LINKOPT)
 
 foobar2000/foobar2000_SDK.lib: foobar2000/abort_callback.obj foobar2000/audio_chunk.obj foobar2000/audio_chunk_channel_config.obj foobar2000/file_info.obj foobar2000/filesystem.obj foobar2000/guids.obj foobar2000/mem_block_container.obj foobar2000/preferences_page.obj foobar2000/replaygain_info.obj foobar2000/service.obj
 	$(MKLIB) $^
 
 foobar2000/%.obj: $(FOOBAR2000_SDK_DIR)/foobar2000/SDK/%.cpp
-	$(CL) -c -Fo$@ -DWIN32 -DUNICODE -EHsc -I $(FOOBAR2000_SDK_DIR) $<
+	$(CL) -c -Fo$@ -DWIN32 -DUNICODE -EHsc -I$(FOOBAR2000_SDK_DIR) $<
 
 foobar2000/pfc.lib: foobar2000/cfg_var.obj foobar2000/guid.obj foobar2000/other.obj foobar2000/string.obj foobar2000/string_conv.obj foobar2000/utf8.obj
 	$(MKLIB) $^
@@ -94,6 +105,8 @@ wince:
 	$(MAKE) -C ../gsplayer
 
 # DirectShow
+
+dsf: asap_dsf.dll
 
 DSHOW_BASECLASSES = $(DSHOW_BASECLASSES_DIR)/amfilter.cpp $(DSHOW_BASECLASSES_DIR)/combase.cpp $(DSHOW_BASECLASSES_DIR)/dllentry.cpp $(DSHOW_BASECLASSES_DIR)/dllsetup.cpp $(DSHOW_BASECLASSES_DIR)/mtype.cpp $(DSHOW_BASECLASSES_DIR)/source.cpp $(DSHOW_BASECLASSES_DIR)/wxlist.cpp $(DSHOW_BASECLASSES_DIR)/wxutil.cpp
 
@@ -136,11 +149,13 @@ asapscan.exe: ../asapscan.c $(COMMON_C) $(COMMON_H)
 
 # library
 
-lib: asap.lib
-
 asap.lib: $(COMMON_C) $(COMMON_H)
 	$(CL) -c $(COMMON_C)
 	$(MKLIB) asap.obj acpu.obj apokeysnd.obj
+
+libasap.a: $(COMMON_C) $(COMMON_H)
+	$(LIB_GCC) -c $(COMMON_C)
+	$(AR) $@ asap.o acpu.o apokeysnd.o
 
 # Java
 
@@ -151,6 +166,8 @@ java:
 
 clean:
 	rm -f *.txt *.html *.dll *.exe *.obj *.exp *.lib *.res *.o
+	rm -f setup/asap.wixobj
+	rm -f libasap.a
 	rm -f wasap/wasap-res.o wasap.exe
 	rm -f winamp/in_asap-res.o in_asap.dll
 	rm -f foobar2000/*.obj foobar2000/*.lib foobar2000/foo_asap.res
@@ -177,6 +194,10 @@ README_Windows.html: ../README ../NEWS ../CREDITS USAGE
 	$(ASCIIDOC) -a asapwin="(included in this binary package)" ../README
 	$(ASCIIDOC_POSTPROCESS)
 
+README_WindowsSetup.html: ../README ../NEWS ../CREDITS USAGE
+	$(ASCIIDOC) -a asapwin="(included in this setup)" -a asapsetup ../README
+	$(ASCIIDOC_POSTPROCESS)
+
 README_WindowsCE.html: ../README ../NEWS ../CREDITS ../gsplayer/USAGE
 	$(ASCIIDOC) -a asapwince="(included in this binary package)" ../README
 	$(ASCIIDOC_POSTPROCESS)
@@ -186,6 +207,14 @@ install_dsf.bat:
 
 uninstall_dsf.bat:
 	echo regsvr32 /u asap_dsf.dll>$@
+
+setup: ../../asap-$(VERSION)-win32.msi
+
+../../asap-$(VERSION)-win32.msi: setup/asap.wixobj wasap/wasap.ico win32 README_WindowsSetup.html
+	light -nologo -o $@ -ext WixUIExtension $<
+
+setup/asap.wixobj: setup/asap.wxs
+	candle -nologo -o $@ -dVERSION=$(VERSION) $<
 
 srcdist: ../configure ../players/cmc.obx ../players/mpt.obx ../players/rmt4.obx ../players/rmt8.obx ../players/tmc.obx ../players/tm2.obx ../README.html
 	rm -f ../../asap-$(VERSION).tar.gz
@@ -210,6 +239,7 @@ srcdist: ../configure ../players/cmc.obx ../players/mpt.obx ../players/rmt4.obx 
 		win32/apollo/ASAP_Apollo.cpp win32/apollo/InputPlugin.h \
 		win32/dshow/asap_dsf.cpp win32/dshow/asap_dsf.def \
 		win32/foobar2000/foo_asap.cpp \
+		win32/setup/asap.wxs \
 		win32/wasap/wasap.c \
 		win32/winamp/in_asap.c \
 		win32/winamp/in2.h win32/winamp/out.h \
@@ -223,7 +253,7 @@ srcdist: ../configure ../players/cmc.obx ../players/mpt.obx ../players/rmt4.obx 
 		-s install-sh configure chksap.pl maketar.pl raw2c.pl \
 		| 7z a -tgzip -si -mx=9 ../../asap-$(VERSION).tar.gz
 
-dist: all foo wince java xbmc srcdist \
+dist: srcdist win32 wince java \
 	COPYING.txt README_Java.html README_Windows.html README_WindowsCE.html \
 	install_dsf.bat uninstall_dsf.bat
 	rm -f ../../asap-$(VERSION)-java.zip
