@@ -2,45 +2,45 @@ How to install and use
 ----------------------
 
 ASAP2WAV::
-Extract `asap2wav.exe` to a directory of your choice
-(for convenience, this directory should be included in your `Path` environment variable).
-+
+{asapsetup%}Extract `asap2wav.exe` to a directory of your choice
+{asapsetup%}(for convenience, this directory should be included in your `Path` environment variable).
+{asapsetup%}+
 Run the program from command line to see the syntax.
 Unless you specify the `-o`/`--output` option, the output filename will be
 constructed from the input filename with the extension changed to `wav`.
 
 WASAP::
-Extract `wasap.exe` to a directory of your choice.
-+
+{asapsetup%}Extract `wasap.exe` to a directory of your choice.
+{asapsetup%}+
 When you run WASAP, an "Open file" dialog appears. Simply select the file
 you want to listen to. WASAP is later controlled by its tray icon.
 When you hover the mouse pointer over the icon, the name of the loaded file appears.
 To open another file, left-click the tray icon. The other options are
 available in the menu which appears when you right-click the icon.
 
-Apollo plugin::
-Extract `ASAP_Apollo.dll` to the `Plug-ins` directory of your Apollo installation.
+{asapsetup%}Apollo plugin::
+{asapsetup%}Extract `ASAP_Apollo.dll` to the `Plug-ins` directory of your Apollo installation.
 
-foobar2000 plugin::
-Extract `foo_asap.dll` to the `components` directory of your foobar2000 installation.
+{asapsetup%}foobar2000 plugin::
+{asapsetup%}Extract `foo_asap.dll` to the `components` directory of your foobar2000 installation.
 
-GSPlayer plugin::
-Put `gspasap.dll` in the directory that contains the GSPlayer executable.
+{asapsetup%}GSPlayer plugin::
+{asapsetup%}Put `gspasap.dll` in the directory which contains the GSPlayer executable.
 
 Winamp plugin::
-Extract `in_asap.dll` to the `Plugins` directory of your Winamp installation.
-It is also recommended that you remove other plugins that support 8-bit Atari music.
+{asapsetup%}Extract `in_asap.dll` to the `Plugins` directory of your Winamp installation.
+It is recommended that you remove other plugins that support 8-bit Atari music.
+
+{asapsetup%}Windows Media Player plugin::
+{asapsetup%}To install: extract `asap_dsf.dll`, `install_dsf.bat` and `uninstall_dsf.bat`
+{asapsetup%}to a directory of your choice, then run `install_dsf.bat`.
+{asapsetup%}+
+{asapsetup%}To uninstall: run `uninstall_dsf.bat`, then delete the files.
 
 XBMC plugin::
-Put `xbmc_asap.dll` in the `system/players/paplayer` directory.
+{asapsetup%}Put `xbmc_asap.dll` in the `system/players/paplayer` directory.
 This DLL can be used with XBox and Windows versions of XBMC.
 Your XBMC must include support for ASAP.
 
-DirectShow source filter::
-To install: extract `asap_dsf.dll`, `install_dsf.bat` and `uninstall_dsf.bat`
-to a directory of your choice, then run `install_dsf.bat`.
-+
-To uninstall: run `uninstall_dsf.bat`, then delete the files.
-
-DLL for Raster Music Tracker::
-Extract `apokeysnd.dll` to the directory which contains `Rmt.exe`.
+{asapsetup%}DLL for Raster Music Tracker::
+{asapsetup%}Extract `apokeysnd.dll` to the directory which contains `Rmt.exe`.
