@@ -1,3 +1,13 @@
+2009-07-19  Piotr Fusik  <fox@scene.pl>
+* win32/Makefile: "all" now builds all Win32 binaries except XBMC,
+  "mingw" just the ones compiled with MinGW (including new libasap.a)
+
+* win32/setup/asap.wxs, win32/Makefile, win32/USAGE:
+  setup under construction using Wix
+
+* README, gsplayer/USAGE, win32/gui.rc: some rewordings
+
+
 2009-07-17  Piotr Fusik  <fox@scene.pl>
 * gsplayer/gspasap.def, win32/Makefile:
   compile GSPlayer plugin for Windows NT with MinGW
